@@ -1,3 +1,8 @@
+2001-04-15  Keisuke Nishida  <kxn30@po.cwru.edu>
+
+	* boot-9.scm (defmacro, define-macro, define-syntax-macro):
+	Define only at the top level.
+
 2001-04-06  Thien-Thi Nguyen  <ttn@revel.glug.org>
 
 	* threads.scm: Update copyright.
